--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/uikit-react-icons",
-  "version": "3.8.5",
+  "version": "3.8.7",
   "description": "A collection of icons for use with Hitachi Vantara's React Components.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "license": "Apache-2.0",
@@ -22,7 +22,7 @@
   "scripts": {
     "build": "npx npm-run-all --npm-path npm --serial clean:all svg-optimize build:*",
     "build:convert": "node ./src/svgToReact.js dir --input assets/ --output bin --force",
-    "build:copy": "npx cp src/IconBase.* bin/",
+    "build:copy": "npx cpx 'src/IconBase.*' bin/",
     "build:babel": "npx npm-run-all --npm-path npm --parallel build:babel:*",
     "build:babel:node": "BABEL_ENV=commonjs npx babel --root-mode upward bin -d dist --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
     "build:babel:legacy": "BABEL_ENV=legacy npx babel --root-mode upward bin -d dist/legacy --extensions '.js,.jsx' --source-maps --ignore '**/tests','**/stories' --copy-files --no-copy-ignored",
@@ -44,21 +44,20 @@
     "react-dom": "^16.13.1 || ^17.0.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.16.3",
+    "@babel/runtime": "^7.17.9",
     "@hitachivantara/uikit-common-themes": "^3.3.0",
     "clsx": "^1.1.1",
-    "core-js": "^3.19.1",
-    "prop-types": "^15.7.2"
+    "core-js": "^3.22.3",
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
-    "cash-cp": "^0.2.0",
     "del-cli": "^4.0.1",
     "htmltojsx": "^0.3.0",
     "jsdom-no-contextify": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "recursive-readdir": "^2.2.2",
     "svgo": "^1.3.2",
-    "yargs": "^17.2.1"
+    "yargs": "^17.4.1"
   },
   "files": [
     "dist"
