--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/uikit-common-themes",
-  "version": "3.3.0",
+  "version": "3.3.2",
   "description": "A collection of themes for use with Hitachi Vantara Components.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "license": "Apache-2.0",
@@ -20,14 +20,13 @@
     "dev:watch": "npx watch \"npm run build\" ./src/",
     "build": "npx npm-run-all --npm-path npm clean build:*",
     "build:to-scss": "json-to-scss \"src/*.*\" dist",
-    "build:to-json": "npx cp -f src/*.json dist",
+    "build:to-json": "npx cpx 'src/*.json' dist",
     "clean": "npx del-cli dist",
     "prepublishOnly": "npm run build",
     "link": "npm link",
     "yalc-publish": "npx yalc publish --no-scripts"
   },
   "devDependencies": {
-    "cash-cp": "^0.2.0",
     "del-cli": "^4.0.1",
     "json-to-scss": "file:lib/json-to-scss.tgz",
     "npm-run-all": "^4.1.5",
