--- a/package.json
+++ b/package.json
@@ -140,6 +140,9 @@
   "overrides": {
     "eslint-plugin-jsx-a11y": {
       "aria-query": "^5.3.0"
+    },
+    "title": {
+      "clipboardy": "^4.0.0"
     }
   },
   "packageManager": "npm@10.8.1+sha256.b8807aebb9656758e2872fa6e7c564b506aa2faa9297439a478d471d2fe32483",
