--- a/package.json
+++ b/package.json
@@ -100,7 +100,10 @@
     "vitest": "^3.2.4"
   },
   "overrides": {
-    "storybook": "$storybook"
+    "storybook": "$storybook",
+    "sucrase": {
+      "glob": "^11.1.0"
+    }
   },
   "packageManager": "npm@10.8.1+sha256.b8807aebb9656758e2872fa6e7c564b506aa2faa9297439a478d471d2fe32483",
   "prettier": "@hitachivantara/uikit-config/prettier",
